--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-alain": {
+    "CloudBlock": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -80,14 +80,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-alain:build"
+            "browserTarget": "CloudBlock:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-alain:build:production"
+              "browserTarget": "CloudBlock:build:production"
             },
             "hmr": {
-              "browserTarget": "ng-alain:build:hmr",
+              "browserTarget": "CloudBlock:build:hmr",
               "hmr": true
             }
           }
@@ -95,7 +95,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-alain:build"
+            "browserTarget": "CloudBlock:build"
           }
         },
         "test": {
@@ -132,7 +132,7 @@
         }
       }
     },
-    "ng-alain-e2e": {
+    "CloudBlock-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -141,11 +141,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-alain:serve"
+            "devServerTarget": "CloudBlock:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-alain:serve:production"
+              "devServerTarget": "CloudBlock:serve:production"
             }
           }
         },
