--- a/package.json
+++ b/package.json
@@ -67,15 +67,17 @@
     "ngx-ueditor": "^2.1.3",
     "screenfull": "^4.0.0",
     "qrious": "^4.0.2",
-    "ngx-block": "^0.4.18",
-    "ngx-block-core": "^0.7.6",
+    "ngx-block": "^0.4.19",
+    "ngx-block-core": "^0.7.7",
     "ngx-color-picker": "^6.7.0",
     "ngx-drag-drop": "^2.0.0-rc.0",
     "ngx-infinite-scroll": "^0.8.4",
     "ng-dynamic-component": "^3.0.0",
     "moment": "^2.19.3",
     "angular2-baidu-map": "^4.5.0",
-    "@swimlane/ngx-graph": "^5.1.0"
+    "@swimlane/ngx-graph": "^5.1.0",
+    "font-awesome": "^4.7.0",
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
