--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "serve:hmr": "ng serve -o --hmr -e=hmr",
-    "build": "npm run color-less && node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --base-href /lh_mes/ --prod --build-optimizer",
+    "build": "npm run color-less && node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build  --prod --build-optimizer",
     "analyze": "ng build --prod --build-optimizer --stats-json",
     "lint": "run-s lint:ts lint:style",
     "lint:ts": "ng lint",
